Updated api with swagger-codegen, but did not update rest of code accordingly
