# api/data_explorer/models/__init__.py
@@ -7,8 +7,6 @@ from data_explorer.models.dataset_response import DatasetResponse
 from data_explorer.models.export_url_request import ExportUrlRequest
 from data_explorer.models.export_url_response import ExportUrlResponse
 from data_explorer.models.facet import Facet
-from data_explorer.models.facet_value import FacetValue
 from data_explorer.models.facets_response import FacetsResponse
 from data_explorer.models.search_response import SearchResponse
 from data_explorer.models.search_result import SearchResult
-from data_explorer.models.time_series_facet_value import TimeSeriesFacetValue
